@@ -118,6 +118,7 @@ D   is inspected during pcre2_dfa_match() execution
 #define PCRE2_UCP                 0x00020000u  /* C J M D */
 #define PCRE2_UNGREEDY            0x00040000u  /* C       */
 #define PCRE2_UTF                 0x00080000u  /* C J M D */
+#define PCRE2_NEVER_BACKSLASH_C   0x00100000u  /* C       */
 
 /* These are for pcre2_jit_compile(). */
 
